kafka-debug-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-debug-ui-service
  namespace: moja3
  labels:
    app: kafka-debug-ui
spec:
  selector:
    app: kafka-debug-ui
  ports:
    - protocol: TCP
      port: 8080  # The service port
      targetPort: 8080  # The container port
  type: ClusterIP  # Internal service for Ingress
